--- a/back/translations/messages.fr.yaml
+++ b/back/translations/messages.fr.yaml
@@ -1,1 +1,1 @@
-'Invalid credentials.': 'Vos informations de connexion sont incorrectes !'
+Invalid credentials.: Vos informations de connexion sont incorrectes !
